--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,7 @@ env/
 .ipynb_checkpoints/
 
 # Data (versioned by DVC)
-data/
+data/*.csv
 
 # Models
 models/*.pkl
@@ -35,4 +35,3 @@ miniconda.exe
 
 projflow.txt
 cred.txt
-local_s3/
