--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,8 @@
-# local package
--e .
-
-# external requirements
-click
-Sphinx
-coverage
-awscli
-flake8
-python-dotenv>=0.5.1
+Flask==3.1.3
+joblib==1.5.3
+numpy==2.4.2
+pandas==3.0.1
+pytest==9.0.2
+python-dotenv==1.2.1
+scikit_learn==1.8.0
+xgboost==3.2.0
