--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 Flask==3.1.3
 joblib==1.5.3
 numpy==1.26.4
-pandas==3.0.1
+pandas==2.2.2
 pytest==9.0.2
 python-dotenv==1.2.1
-scikit_learn==1.8.0
-xgboost==3.2.0
+scikit-learn==1.4.2
+xgboost==2.0.3
