--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -25,5 +25,19 @@ jobs:
       - name: Run tests
         run: pytest tests/ -v
 
-      - name: Build Docker image
-        run: docker build -t fraud-detection .
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-2
+
+      - name: Login to ECR
+        run: |
+          aws ecr get-login-password --region us-east-2 | docker login --username AWS --password-stdin 578273200097.dkr.ecr.us-east-2.amazonaws.com
+
+      - name: Build and push Docker image
+        run: |
+          docker build -t fraud-detection .
+          docker tag fraud-detection 578273200097.dkr.ecr.us-east-2.amazonaws.com/fraud-detection:latest
+          docker push 578273200097.dkr.ecr.us-east-2.amazonaws.com/fraud-detection:latest
